[tool.poetry]
name = "sphinx-jinja"
version = "1.2.0"
description = "includes jinja templates in a documentation"
authors = ["Pierre Tardy <tardyp@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/tardyp/sphinx-jinja"
keywords = [
    "sphinx",
    "jinja"
]
packages = [
  { include = "sphinxcontrib" }
]
[tool.poetry.dependencies]
python = ">=3.6"
Sphinx = "^3.4.3"
docutils = "^0.16"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
flake8 = "^3.8.4"
sphinx-testing = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[flake8]
max-line-length = 120
