[metadata]
name = sphinx-jinja
version = 0.2.1
author = Pierre Tardy
author-email = tardyp@gmail.com
summary = includes jinja templates in a documentation
description-file = README.rst
license = MIT
keywords =
    sphinx
    jinja
[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib
[flake8]
max-line-length = 120
