[metadata]
name = sphinx-jinja
author = Pierre Tardy
author-email = tardyp@gmail.com
summary = includes jinja templates in a documentation
description-file = README.rst
home-page = https://github.com/tardyp/sphinx-jinja
license = MIT
keywords =
    sphinx
    jinja
[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib
[flake8]
max-line-length = 120
